# AI

./: .gitignore  .mega-linter.yml  README.md  pyproject.toml
docs/: README.md  branching.md  databricks_git_workflow.md  datasets.md  delta_lake.md  dualpush.md  initial_setup_dbw_repos.md  local_development_environment.md  local_development_environmnet.md  ml_architecture.md  mlflow.md  notebook_overview.md
docs/pull_request_template/branches/: dev.md  main.md
docs/theory_docs/: graphsage_theory.md
examples/: README.md
examples/xgb_demo/: MLproject  conda.yaml  train.py
notebooks/delta_demo/: bronzing.py  generate_raw.py
notebooks/doccc/: experiment_mlflow.py  gold_asif_stream.py  model_serving.py  nested_cv_model_registry.py  spark_usecases.py
notebooks/doccc/dataflow/: bronze.py  silver.py
notebooks/doccc/mlflow/: experiment_mlflow.py  nested_cv_model_registry.py  utils.py
notebooks/earthquake/shiny/: shiny_example.r  (+3 more)
notebooks/elliptic/: active_learning_elliptic_shap.py  mlflow_projects_xgboost.py
notebooks/fincen/: fincen_graph_pre_process.py
notebooks/graph_models/: community_detection.py  demo_gnn_link_prediction.py  demo_graph_structure.py  demo_link_prediction.py  positive_and_negative_graph.py
notebooks/ieee_fraud/: pycaret_experimentation.py  silver.py
notebooks/shiny/: shiny_example.r  shiny_filter_and_action_button.r
pipelines/: cicd.yaml  pr.yaml
terraform/: databricks_cluster.tf  databricks_notebook.tf  databricks_workspace.tf  mount_storage.tf  providers.tf  storage_account.tf  variables.tf
utils/: dualpush.py
(+19 files in other folders)
