[tool.poetry]
name = "kantegaamlai"
version = "0.1.0"
description = "Shared code for Kantega AML AI Project"
authors = ["Kantega AML AI Team"]

[tool.poetry.dependencies]
python = "^3.7"
databricks-cli = "^0.14.2"
GitPython = "^3.1.14"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
